--- a/project-1-yoel/index.html
+++ b/project-1-yoel/index.html
@@ -8,13 +8,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="outputResult">
+      <div class="outPut">
         <p id="output">0</p>
       </div>
-
-      <input id="add" type="submit" value="+" />
-      <input id="input" type="number" value="1" />
-      <input id="subtract" type="submit" value="-" />
+      <div class="matriX">
+        <input id="addition" type="submit" value="+" />
+        <input id="input" type="number" value="1" />
+        <input id="subtraction" type="submit" value="-" />
+      </div>
     </div>
     <script src="./js/main.js"></script>
   </body>
