[Assessment1] Add Styling Fix and DRY Js

--- a/project-1-yoel/index.html
+++ b/project-1-yoel/index.html
@@ -12,9 +12,9 @@
         <p id="output">0</p>
       </div>
       <div class="matriX">
-        <input id="addition" type="submit" value="+" />
-        <input id="input" type="number" value="1" />
-        <input id="subtraction" type="submit" value="-" />
+        <input class="addme" id="addition" type="submit" value="+" />
+        <input class="selectme" id="input" type="number" value="1" />
+        <input class="subme" id="subtraction" type="submit" value="-" />
       </div>
     </div>
     <script src="./js/main.js"></script>
